@@ -1,6 +1,6 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.648 2006/05/16 04:01:43 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.649 2006/05/16 04:29:02 agaffney Exp $
 
   15 May 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/templates/x86ArchitectureTemplate.py:
@@ -10,6 +10,8 @@
   in _partition_resize_step(), delete, recreate at new size, resize, delete
   call resize2fs with no size argument so it fills entire partition
   more logging
+  only delete, recreate, resize, delete if growing
+  pass new size to resize2fs in K
 
   9 May 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIStorageDevice.py:
